Fixed navbar items effect and gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -490,8 +490,8 @@ body {
 
   margin-block-end: 10px;
 }
-.navbar-item:nth-child(8) .navbar-link {
-  margin-right: 25px;
+.navbar-item:nth-child(9) .navbar-link {
+  margin-right: 35px;
 }
 /* @media (min-width:641px)  { 
   .navbar-list{
@@ -1599,7 +1599,7 @@ footer {
   .navbar-list {
     margin-block-end: 0;
     display: flex;
-    gap: 30px;
+    gap: 15px;
   }
 
   .switch-container{
